# ai-agent

./: .gitignore  CMakeLists.txt  SETUP.md  config.json
scripts/: convert_model.sh
src/: agent.cpp  agent.hpp  config.cpp  config.hpp  main.cpp  parsing.hpp  tools.cpp  tools.hpp
tests/: test_headless.cpp  test_parsing.cpp  test_tools.cpp
